# function-wrap-cpp-namespace

./: CMakeLists.txt  README.md  build_without_cmake.sh  foo.cpp  main.cpp  make.sh  open_image_as_mat.cpp
src/: main.cpp
